# fields

./: .gitmodules  CMakeLists.txt  Makefile
assets/: scalar.frag  scalar.vert  vector.frag  vector.vert
cmake/: common.cmake
src/: main.c
